user interface file is added

--- a/Source/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
+++ b/Source/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
@@ -103,5 +103,8 @@
   <ItemGroup>
     <Resource Include="testdata.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="System\Windows\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
