--- a/Source/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
+++ b/Source/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
@@ -110,5 +110,8 @@
   <ItemGroup>
     <Folder Include="System\Windows\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MetrologyNET_Taxonomy_v2.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
