--- a/Source/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
+++ b/Source/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dragablz, Version=0.0.3.190, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dragablz.0.0.3.190\lib\net45\Dragablz.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialDesignColors, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.1.2\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
@@ -111,7 +114,9 @@
     <Folder Include="System\Windows\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="MetrologyNET_Taxonomy_v2.xml" />
+    <Resource Include="MetrologyNET_Taxonomy_v2.xml">
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
