unit test file changed because of wrong push

--- a/Source/SOA_DataAccessLib/UnitTestLoad/SOA_DataAccessLibrary_UnitTest1.csproj
+++ b/Source/SOA_DataAccessLib/UnitTestLoad/SOA_DataAccessLibrary_UnitTest1.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{903E070B-3662-4092-BFEC-18BAEBD710E6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnitTestLoad</RootNamespace>
     <AssemblyName>UnitTestLoad</AssemblyName>
@@ -33,9 +33,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
