--- a/Source/UserInterface/sampleUI/WpfApp4/packages.config
+++ b/Source/UserInterface/sampleUI/WpfApp4/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dragablz" version="0.0.3.190" targetFramework="net452" />
+  <package id="Kent.Boogaart.Converters" version="1.3.1" targetFramework="net45" />
+  <package id="Kent.Boogaart.HelperTrinity" version="1.5.2" targetFramework="net45" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net45" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net45" />
 </packages>
