--- a/σ_archive/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
+++ b/σ_archive/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>WpfApp4</RootNamespace>
     <AssemblyName>WpfApp4</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -145,7 +145,7 @@
     <Resource Include="SoA1[4395].ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\SOA_DataAccessLib\SOA_DataAccessLib\SOA_DataAccessLibrary.csproj">
+    <ProjectReference Include="..\..\..\..\Source\SOA_DataAccessLib\SOA_DataAccessLib\SOA_DataAccessLibrary.csproj">
       <Project>{7af4b06c-7888-431f-ac46-db9b1a722990}</Project>
       <Name>SOA_DataAccessLibrary</Name>
     </ProjectReference>
