--- a/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
+++ b/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ViewModels\CompanyInfoViewModel.cs" />
     <Compile Include="ViewModels\Helper.cs" />
     <Compile Include="ViewModels\Range.cs" />
+    <Compile Include="ViewModels\RangeViewModel.cs" />
     <Compile Include="ViewModels\Taxonomy.cs" />
     <Compile Include="ViewModels\TaxonomyInfoViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
@@ -98,6 +99,9 @@
     </Compile>
     <Compile Include="Views\CompanyInfoView1.xaml.cs">
       <DependentUpon>CompanyInfoView1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RangeView.xaml.cs">
+      <DependentUpon>RangeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TaxonomyInfoView.xaml.cs">
       <DependentUpon>TaxonomyInfoView.xaml</DependentUpon>
@@ -150,6 +154,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\RangeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\TaxonomyInfoView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -164,13 +172,13 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Views\icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\SOA_DataAccessLib\SOA_DataAccessLib\SOA_DataAccessLibrary.csproj">
       <Project>{7af4b06c-7888-431f-ac46-db9b1a722990}</Project>
       <Name>SOA_DataAccessLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
