--- a/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
+++ b/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
@@ -85,15 +85,18 @@
     <Compile Include="Models\MeasurementParameter.cs" />
     <Compile Include="Models\ProcessType.cs" />
     <Compile Include="Models\TaxonomyInfoModel.cs" />
+    <Compile Include="Models\TaxonomyInputParam.cs" />
     <Compile Include="ViewModels\CompanyInfoViewModel.cs" />
     <Compile Include="ViewModels\Helper.cs" />
     <Compile Include="ViewModels\Range.cs" />
     <Compile Include="ViewModels\RangeViewModel.cs" />
     <Compile Include="ViewModels\Taxonomy.cs" />
-    <Compile Include="ViewModels\TaxonomyInfoViewModel.cs" />
+    <Compile Include="ViewModels\CreateTaxonomyViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
+    <Compile Include="ViewModels\TaxonomyViewModel.cs" />
     <Compile Include="ViewModels\Technique.cs" />
     <Compile Include="ViewModels\TechniqueViewModel.cs" />
+    <Compile Include="ViewModels\WelcomeViewModel.cs" />
     <Compile Include="Views\CompanyInfoView.xaml.cs">
       <DependentUpon>CompanyInfoView.xaml</DependentUpon>
     </Compile>
@@ -103,14 +106,20 @@
     <Compile Include="Views\RangeView.xaml.cs">
       <DependentUpon>RangeView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TaxonomyInfoView.xaml.cs">
-      <DependentUpon>TaxonomyInfoView.xaml</DependentUpon>
+    <Compile Include="Views\CreateTaxonomyView.xaml.cs">
+      <DependentUpon>CreateTaxonomyView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\TaxonomyView.xaml.cs">
+      <DependentUpon>TaxonomyView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TechniqueView.xaml.cs">
       <DependentUpon>TechniqueView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WelcomeView.xaml.cs">
+      <DependentUpon>WelcomeView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -158,7 +167,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\TaxonomyInfoView.xaml">
+    <Page Include="Views\CreateTaxonomyView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -166,7 +175,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\TaxonomyView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\TechniqueView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\WelcomeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -179,6 +196,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Views\icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\SoA.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
