-Technique View, Model, ViewModel classes added -Range View, Model, ViewModel classes added

--- a/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
+++ b/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
@@ -84,8 +84,14 @@
     <Compile Include="Models\CompanyInfoModel.cs" />
     <Compile Include="Models\MeasurementParameter.cs" />
     <Compile Include="Models\ProcessType.cs" />
+    <Compile Include="Models\Range_Constant.cs" />
+    <Compile Include="Models\Range_Formula.cs" />
+    <Compile Include="Models\Range_Range.cs" />
     <Compile Include="Models\TaxonomyInfoModel.cs" />
     <Compile Include="Models\TaxonomyInputParam.cs" />
+    <Compile Include="Models\Technique_InputParameter.cs" />
+    <Compile Include="Models\Technique_InputParameterRange.cs" />
+    <Compile Include="Models\Technique_Output.cs" />
     <Compile Include="ViewModels\CompanyInfoViewModel.cs" />
     <Compile Include="ViewModels\Helper.cs" />
     <Compile Include="ViewModels\Range.cs" />
