-Technique and Range classes for View/ViewModel/Model added -made binding between view and viewModel classes for Technique and Range -some data-binding to scope doc on the Technique

--- a/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
+++ b/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Models\Technique_InputParameter.cs" />
     <Compile Include="Models\Technique_InputParameterRange.cs" />
     <Compile Include="Models\Technique_Output.cs" />
+    <Compile Include="Models\Technique_Variable.cs" />
     <Compile Include="ViewModels\CompanyInfoViewModel.cs" />
     <Compile Include="ViewModels\Helper.cs" />
     <Compile Include="ViewModels\Range.cs" />
