--- a/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
+++ b/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
@@ -95,13 +95,13 @@
     <Compile Include="Models\Technique_Variable.cs" />
     <Compile Include="ViewModels\CompanyInfoViewModel.cs" />
     <Compile Include="ViewModels\Helper.cs" />
-    <Compile Include="ViewModels\Range.cs" />
+    <Compile Include="Models\TreeView_Range.cs" />
     <Compile Include="ViewModels\RangeViewModel.cs" />
-    <Compile Include="ViewModels\Taxonomy.cs" />
+    <Compile Include="Models\TreeView_Taxonomy.cs" />
     <Compile Include="ViewModels\CreateTaxonomyViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="ViewModels\TaxonomyViewModel.cs" />
-    <Compile Include="ViewModels\Technique.cs" />
+    <Compile Include="Models\TreeView_Technique.cs" />
     <Compile Include="ViewModels\TechniqueViewModel.cs" />
     <Compile Include="ViewModels\WelcomeViewModel.cs" />
     <Compile Include="Views\CompanyInfoView.xaml.cs">
