--- a/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
+++ b/Source/MVVM_UI/SoAEditor/SoAEditor.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Models\Node.cs" />
     <Compile Include="Models\ProcessType.cs" />
     <Compile Include="Models\Range_Constant.cs" />
+    <Compile Include="Models\Range_ExpressionVariable.cs" />
     <Compile Include="Models\Range_Formula.cs" />
     <Compile Include="Models\Range_Range.cs" />
     <Compile Include="Models\Range_SubRange.cs" />
@@ -213,10 +214,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Views\icon.ico" />
+    <Resource Include="Icon\icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Views\SoA.png" />
+    <Resource Include="Icon\SoA.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
