Finish MenuItem functions for "File"

--- a/σ_archive/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
+++ b/σ_archive/UserInterface/sampleUI/WpfApp4/WpfApp4.csproj
@@ -59,6 +59,9 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="SoA_DataAccessLib">
+      <HintPath>..\..\..\..\Source\SoA\SoA_DataAccessLib\bin\Debug\net5.0\SoA_DataAccessLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Primitives, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ComponentModel.Primitives.4.3.0\lib\net45\System.ComponentModel.Primitives.dll</HintPath>
@@ -143,12 +146,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="SoA1[4395].ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Source\SoA\SOA_DataAccessLib\SOA_DataAccessLib\SOA_DataAccessLibrary.csproj">
-      <Project>{7af4b06c-7888-431f-ac46-db9b1a722990}</Project>
-      <Name>SOA_DataAccessLibrary</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
