Added Context menu delete for RangeGrid view
Fixed Technique not loading if taxon has parameters that do not have quantities.
Fixed first round of the template case range's not having the assertion values locked in.

--- a/Source/SoA/SoA_Editor/SoA_Editor.csproj
+++ b/Source/SoA/SoA_Editor/SoA_Editor.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\CompanyInfoView1.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Icon\SoA.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="Views\CompanyInfoView1.xaml" />
   </ItemGroup>
 
   <ItemGroup>
